fixed header image and extra space below

--- a/css/index.css
+++ b/css/index.css
@@ -188,11 +188,9 @@ header nav a {
 .bottom {
   display: flex;
   width: 880px;
-  margin: 0 auto;
 }
 .bottom .feature {
   width: 33%;
-  padding: 20px;
 }
 .bottom .feature h3 {
   font-size: 1.8rem;
@@ -212,11 +210,6 @@ header nav a {
 }
 .learn-top .learn-header-image img {
   width: 100%;
-  height: 80%;
-}
-.learn-top .learn-header-button {
-  height: 100px;
-  width: 100px;
 }
 .learn-top .learn-header-button h2 {
   top: 10px;
@@ -225,7 +218,6 @@ header nav a {
   position: absolute;
   top: 250px;
   left: 60vw;
-  margin-right: 30px;
 }
 .learn-top .learn-header-button button {
   font-size: 1.6rem;
