--- a/less/home.less
+++ b/less/home.less
@@ -39,11 +39,11 @@
 .bottom {
 	display: flex;
   width: 880px;
-  margin: 0 auto;
+  // margin: 0 auto;
 
 	.feature {
 		width: 33%;
-		padding: 20px;
+		// padding: 20px;
 
 		h3 {
 			font-size: 1.8rem;
