--- a/less/learn.less
+++ b/less/learn.less
@@ -8,13 +8,10 @@
 
     img {
       width: 100%;
-      height: 80%;
     }
   }
 
   .learn-header-button {
-    height: 100px;
-    width: 100px;
 
     h2 {
       top: 10px;
@@ -23,7 +20,7 @@
       position: absolute;
       top: 250px;
       left: 60vw;
-      margin-right: 30px;
+      // margin-right: 30px;
     }
 
     button {
